<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollIndicators="start"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail"
            android:layout_width="220dp"
            android:layout_height="230dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/black"/>

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite_border_black" />

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/detail_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"/>

        <TextView
            android:id="@+id/username_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/detail_username"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/detail_location"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repository_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/detail_repository"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/company_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/repository_detail"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/detail_company"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/followers_deatil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_detail"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:text="@string/detail_followers"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/following_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_detail"
            android:layout_alignParentEnd="true"
            android:text="@string/detail_following"
            android:textSize="15sp"
            android:layout_marginEnd="50dp"
            android:textStyle="bold" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#800080"
            android:layout_below="@id/followers_deatil"
            android:layout_marginTop="40dp"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:layout_below="@id/tabLayout"
            android:layout_alignParentBottom="true"
            android:background="#DA70D6" />

    </RelativeLayout>

</ScrollView>